# jurist

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  CONTINUITY.md  Makefile  README.md  conftest.py  legaldesk_plan_v2.docx  plan.md  pyproject.toml  requirements-desktop.txt  requirements.txt  start_legaldesk.bat  stop_legaldesk.bat
.github/workflows/: ci.yml
backend/: __init__.py  main.py  runtime_paths.py
backend/adapters/: __init__.py  consultant_plus.py  local_llm.py  registry.py
backend/core/: __init__.py  anonymizer.py  archive.py  audit.py  comparison.py  dict_detector.py  document_parser.py  exports.py  legal_terms.py
backend/core/dictionaries/: geo.py  names.py
backend/core/entity_rules/: __init__.py  address_patterns.py  common.py  context_rules.py  (+7 more)
data/archive/: audit.db  cases.db
desktop/: __init__.py  launcher.py
files/: README.md  anonymizer.py  consultant_plus.py  index.html  main.py
frontend/static/: index.html
packaging/macos/: LegalDesk.spec  QUICKSTART.md  README.md  STANDALONE_APP.md  build_installer.sh  run_legaldesk.sh
packaging/windows/: LegalDesk.iss  LegalDesk.spec  README.md  build_installer.ps1
src/legaldesk/: __init__.py  logging_config.py
tests/: smoke_test.py  test_address_regex.py  test_anonymizer.py  test_config.py  test_date_patterns.py  test_highlight.py  test_legal_engine.py  test_mapping.py  test_name_detector.py  test_regex_patterns.py  test_resolver.py  test_session_store.py  test_stub_provider.py  test_vehicle_detector.py  test_web.py
tests/fixtures/: anonymizer_cases.jsonl
(+26 files in other folders)
