[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "legaldesk"
version = "0.1.0"
description = "АРМ Юриста — анонимизация ПДн и поиск по правовым базам"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0,<4",
    "pydantic>=2.0,<3",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
]

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
packages = ["legaldesk"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=legaldesk --cov-report=term-missing"
